calculator with html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>This is a calculator!</h1>
+<h2>A very simple one</h2>
+
+<p>Click the button to demonstrate the prompt box.</p>
+
+<button onclick="myFunction()">Try it</button>
+<p id="demo"></p>
     <script src="index.js"></script>
 </body>
 </html>
